--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,30 +4,34 @@
 name: Node.js Package
 
 on:
-  release:
-    types: [created]
+release:
+  types: [created]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - run: npm ci
-      - run: npm test
+build:
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 10.x # Use a Node 10.x version
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build  # If you have a build step in your project
 
-  publish-npm:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+publish-npm:
+  needs: build
+  runs-on: ubuntu-latest
+  if: github.event_name == 'release' && github.event.action == 'created' # Only run on release creation
+  steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 10.x  # Match Node version from build job
+        registry-url: https://registry.npmjs.org/
+        cache: 'npm'
+    - run: npm ci
+    - run: npm publish
+      if: success()
+      env:
+        NPM_TOKEN: ${{secrets.npm_token}}
