--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,29 +1,46 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Publish Package to npmjs
+name: Release CI
 
 on:
-push:
-  branches:
-    - main  # 'created' is usually the preferred trigger for publishing
+  push:
+    tags: "*"
+
+env:
+  NODE_VERSION: "18.x"
 
 jobs:
-publish-npm:  # No separate build job needed unless you have tests or other build steps
-  runs-on: ubuntu-latest
-  permissions:
-    contents: read  # Only needed if you're checking out a private repo
-    # id-token: write  # Not needed for publishing to npmjs
-  steps:
-    - uses: actions/checkout@v4
-      if: github.event_name == 'release' # Only checkout if a release is created
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 16.x # LTS version is recommended unless you need 20.x
-        registry-url: 'https://registry.npmjs.org'
-        cache: 'npm' # Cache dependencies for faster builds
-    - run: npm ci
-    - run: npm publish --access public --provenance  # Use correct order and environment variable
-      if: success() && github.event_name == 'release' # Publish only on successful release
-      env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }} # Use NPM_TOKEN, not NODE_AUTH_TOKEN
+  build:
+    name: Build and Release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          registry-url: "https://registry.npmjs.org"
+
+      - name: Build package
+        run: |
+          npm install
+          npm run build:prod
+      - name: Publish package
+        run: |
+          cd dist/lib
+          npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Create release
+        run: |
+          VERSION=${GITHUB_REF/refs\/tags\//}
+          gh release create "${VERSION}" -t "${VERSION}" --generate-notes
+          gh release view "${VERSION}"
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
