--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng2-semantic-ui",
+  "name": "@winnyboy5/ng2-semantic-ui",
   "version": "0.9.8",
   "description": "Angular Semantic UI Components",
   "repository": {
