--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Angular Semantic UI Components",
   "repository": {
     "type": "git",
-    "url": "https://github.com/edcarroll/ng2-semantic-ui/tree/master"
+    "url": "https://www.npmjs.com/~winnyboy5/ng2-semantic-ui/tree/master"
   },
   "bugs": {
-    "url": "https://github.com/edcarroll/ng2-semantic-ui/tree/master/issues"
+    "url": "https://www.npmjs.com/~winnyboy5/ng2-semantic-ui/tree/master/issues"
   },
-  "author": "https://github.com/edcarroll/ng2-semantic-ui/graphs/contributors",
+  "author": "https://www.npmjs.com/~winnyboy5/ng2-semantic-ui/graphs/contributors",
   "keywords": [
     "angular",
     "angular-components",
