--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "~winnyboy5/ng2-semantic-ui",
+  "name": "@winnyboy55/ng2-semantic-ui",
   "version": "0.9.8",
   "description": "Angular Semantic UI Components",
   "repository": {
     "type": "git",
-    "url": "https://www.npmjs.com/~winnyboy5/ng2-semantic-ui/tree/master"
+    "url": "https://www.npmjs.com/@winnyboy55/ng2-semantic-ui/tree/master"
   },
   "bugs": {
-    "url": "https://www.npmjs.com/~winnyboy5/ng2-semantic-ui/tree/master/issues"
+    "url": "https://www.npmjs.com/@winnyboy55/ng2-semantic-ui/tree/master/issues"
   },
-  "author": "https://www.npmjs.com/~winnyboy5/ng2-semantic-ui/graphs/contributors",
+  "author": "https://www.npmjs.com/@winnyboy55/ng2-semantic-ui/graphs/contributors",
   "keywords": [
     "angular",
     "angular-components",
