--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "~winnyboy5/ng2-semantic-ui",
+  "name": "@winnyboy55/ng2-semantic-ui",
   "version": "0.9.8",
   "description": "Angular Semantic UI Components",
   "repository": {
