Update TypeScript configuration to use scoped package names for ng2-semantic-ui and modify GitHub Actions workflow for NPM publishing, including version tag adjustments and updated Node.js setup.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
       "dom"
     ],
     "paths": {
-      "ng2-semantic-ui": ["dist"],
-      "ng2-semantic-ui/locales": ["dist/locales"],
-      "ng2-semantic-ui/*": ["dist/*"],
+      "@winnyboy5/ng2-semantic-ui": ["dist"],
+      "@winnyboy5/ng2-semantic-ui/locales": ["dist/locales"],
+      "@winnyboy5/ng2-semantic-ui/*": ["dist/*"]
     }
   }
 }
