--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,48 +1,32 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
-name: Release CI
+name: NPM Package Publish
 
 on:
   push:
-    tags: "*"
-    branches:
-      - master
-
-env:
-  NODE_VERSION: "10.x"
+    tags:
+      - 'v*'
 
 jobs:
-  build:
-    name: Build and Release
+  publish:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Set up Node
-        uses: actions/setup-node@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          registry-url: "https://registry.npmjs.org"
+          node-version: '10'
+          registry-url: 'https://registry.npmjs.org'
           scope: '@winnyboy5'
 
-      - name: Build package
-        run: |
-          npm install
-          npm run build:prod
-      - name: Publish package
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build library
+        run: npm run lib:build:prod
+
+      - name: Publish to NPM
         run: |
           cd dist
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: Create release
-        run: |
-          VERSION=${GITHUB_REF/refs\/tags\//}
-          gh release create "${VERSION}" -t "${VERSION}" --generate-notes
-          gh release view "${VERSION}"
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
